# CloudR

./: .gitlab-ci.yml  .gitmodules  README.md  meson.build
.build-tools/containers/: build.sh  deploy.sh  manifest.sh  run.sh
.build-tools/containers/buildenv/: Dockerfile  run.sh
.github/workflows/: master-test-workflow.yml  master.yml  pr-development-workflow.yml  pr-development.yml
docs/source/: conf.py  index.rst
docs/source/introduction/: overview.rst
examples/: meson.build
examples/basic/: basic.cpp  config.json  meson.build
examples/clone/: clone.cpp  meson.build
examples/memorySlots/: memorySlots.cpp  meson.build
examples/template/: meson.build  template.cpp
include/hicr/backends/cloudr/: communicationManager.hpp  communicationManagerImpl.hpp  computeResource.hpp  device.hpp  instance.hpp  instanceManager.hpp  memorySpace.hpp  topologyManager.hpp
